...
                                                </constraints>
                                                <items>
                                                    <navigationItem title="New Course" largeTitleDisplayMode="always" id="9Q1-sx-Pjn">
                                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="OR0-hP-YJ3">
                                                            <connections>
...
                                                </connections>
                                            </pickerView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Course Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TbH-EB-gIH">
                                                <rect key="frame" x="20" y="359.5" width="335" height="30"/>
                                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Course Abbreveation" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bjp-TE-mCW">
                                                <rect key="frame" x="20" y="409.5" width="335" height="30"/>
                                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                </constraints>
                                                <size key="titleShadowOffset" width="0.0" height="12"/>
                                                <state key="normal" title="Create a new Semester"/>
                                                <connections>
                                                    <action selector="newSemesterButton:" destination="t99-mJ-aEn" eventType="touchUpInside" id="sw6-iy-osW"/>
...
                                            <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <state key="normal" title="Start now!">
                                                <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
...
                                </constraints>
                                <items>
                                    <navigationItem title="New Semester" id="tOn-SK-u4H">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="NFW-gb-CoF">
                                            <connections>
...
